--- a/auth_service/pyproject.toml
+++ b/auth_service/pyproject.toml
@@ -15,6 +15,8 @@ alembic = "^1.13.3"
 requests = "^2.32.3"
 ruff = "^0.7.1"
 sqlalchemy = "^2.0.36"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pyjwt = "^2.9.0"
 
 
 [build-system]
